# clewdr

./: Cargo.toml  Dockerfile  README.md  README_zh.md  RELEASE_NOTES.md
.cargo/: config.toml
.github/workflows/: build.yml  docker-build.yml  sync-upstream-to-dev.yml
clewdr-frontend/: Cargo.toml  Trunk.toml  index.html
clewdr-frontend/.cargo/: config.toml
clewdr-frontend/locales/: en.json  zh.json
clewdr-frontend/public/: style.css
clewdr-frontend/src/: i18n.rs  main.rs  storage.rs  types.rs  utils.rs
clewdr-frontend/src/api/: mod.rs
clewdr-frontend/src/components/: app.rs  auth.rs  config_tab.rs  cookie_submit.rs  mod.rs
clewdr-frontend/src/components/cookie/: mod.rs  row.rs  usage.rs
clewdr-types/: Cargo.toml
clewdr-types/src/: config.rs  lib.rs  reason.rs  usage.rs
frontend/src/components/config/: ConfigForm.tsx
frontend/src/locales/en/: translation.json
frontend/src/locales/zh/: translation.json
frontend/src/types/: config.types.ts
src/: lib.rs  main.rs  router.rs
src/api/: config.rs  misc.rs  mod.rs
src/claude_code_state/: chat.rs  exchange.rs  mod.rs
src/claude_web_state/: chat.rs  conversation_cache.rs  diff.rs  mod.rs  transform.rs
src/config/: clewdr_config.rs  constants.rs  cookie.rs  reason.rs
src/providers/claude/: mod.rs
src/services/: cookie_actor.rs
src/types/: claude.rs  oai.rs
src/types/claude_web/: request.rs  response.rs
src/utils/: mod.rs
tests/: conversation_cache_test.rs  image_conversion_test.rs
