[package]
name = "clewdr-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
clewdr-types = { path = "../clewdr-types" }
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "Document",
  "History",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Storage",
  "UrlSearchParams",
  "Window",
] }
