[package]
name = "clewdr-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
display = ["dep:chrono", "dep:thiserror"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.thiserror]
version = "2"
optional = true
